2006-10-28  Alex Roitman  <shura@gramps-project.org>
	* Makefile.am (DOC_LINGUAS): Enable French manual.

2006-10-27  Alex Roitman  <shura@gramps-project.org>
	* gramps.pot: regenerate template.
	* C/gramps.xml: Add sect2 ids; remove image scale; add abstract
	and maintainer fields.	

2006-10-11  Alex Roitman  <shura@gramps-project.org>
	* Makefile.am (DOC_MODULE): Use gramps in stead of gramps-manual.
	* C/gramps.xml: Add in place of gramps-manual.xml;
	add more authors.
	* gramps.omf.in: Add in place of gramps-manual.omf.in
	* C/authors.xml: Add mote authors.
	* gramps.pot: replace gramps-manual.pot

2006-03-17  Alex Roitman  <shura@gramps-project.org>
	* Makefile.am: Add new help infrastructure.